@@ -3,6 +3,10 @@
 # 2. make sure that lines break at 80 chars for constricted display situations
 #<-------------------------------- 80 chars ---------------------------------->#
 
+2017-09-17 Giuseppe Aruta
+  * Added radius/circumference/area display to DrawConstrainedCircleTool as
+    suggested by Jucca  [JPP-Devel] Show area while drawing circles? Sept 21 2017
+
 2017-09-17 ede
   * fix bug 460: "Create Grid may jam OpenJUMP"
     CreateGridPlugIn is now cancellable and shows progress
